# Bl3nder

./: @lessons-learned.md  @memories.md  @scratchpad.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build_athenamist_blender.sh  download_libs.sh
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  community.yml  performance.yml  stale.yml
build_athenamist/AthenaMist Blender.app/Contents/: Info.plist
build_athenamist/AthenaMist Blender.app/Contents/MacOS/: AthenaMistBlender
build_mac/: CMakeCache.txt
build_macos/: AthenaMist_AI_Agent_v1.0.0_macOS.dmg  create_dmg.sh  icon.icns
docs/: ARCHITECTURE.md  BUILD_SYSTEM.md  CI_CD.md  COMMUNITY.md  DEBUGGING.md  DEVELOPER_ONBOARDING.md  PUBLIC_RELEASE.md  TESTING.md
docs/components/: BLENKERNEL.md  BLENLIB.md
scripts/: setup_github.sh
source/blender/ai_agent/: __init__.py  requirements.txt
source/blender/ai_agent/core/: athena_mist_integration.py  config_manager.py  gemini_integration.py
source/blender/ai_agent/ui/: gemini_interface.py  immersive_interface.py
source/blender/athenamist_integration/: CMakeLists.txt  README.md  create_icon.py  demo.py  requirements.txt
source/blender/athenamist_integration/core/: intent_parser.py
source/blender/athenamist_integration/ui/: immersive_interface.py
source/blender/render/lilybear/: CMakeLists.txt  lilybear_ai_integration.cc  lilybear_ai_integration.hh  lilybear_engine.cc  lilybear_engine.h  lilybear_instance.cc  lilybear_instance.hh  lilybear_live_rendering.cc  lilybear_live_rendering.hh  lilybear_pipeline.cc  lilybear_types.hh  (+2 more)
(+9 files in other folders)
